Update 3. Landmark Detection and Tracking.ipynb
1st version of slam() function.

--- a/3. Landmark Detection and Tracking.ipynb
+++ b/3. Landmark Detection and Tracking.ipynb
@@ -365,40 +365,106 @@
    "source": [
     "## TODO: Complete the code to implement SLAM\n",
     "\n",
+    "# update prediction (control)\n",
+    "def update_motion(next_step, step, dx, dy, omega, xi, mo_noise):\n",
+    "    ix = step * 2\n",
+    "    iy = ix + 1\n",
+    "    \n",
+    "    ix_next = next_step * 2\n",
+    "    iy_next = ix_next + 1\n",
+    "    \n",
+    "    # at row 0\n",
+    "    # x0 - x1 - dx = 0\n",
+    "    omega[ix][ix] += mo_noise\n",
+    "    omega[ix][ix_next] += -mo_noise\n",
+    "    xi[ix] += (-mo_noise * dx)\n",
+    "    \n",
+    "    # at row 0\n",
+    "    # y0 - y1 - dy = 0\n",
+    "    omega[iy][iy] += mo_noise\n",
+    "    omega[iy][iy_next] += -mo_noise\n",
+    "    xi[iy] += (-mo_noise * dy)\n",
+    "    \n",
+    "    # at row 1\n",
+    "    # -x0 + x1 + dx = 0\n",
+    "    omega[ix_next][ix] += -mo_noise\n",
+    "    omega[ix_next][ix_next] += mo_noise\n",
+    "    xi[ix_next] += (mo_noise * dx)\n",
+    "    \n",
+    "    # at row 1\n",
+    "    # -y0 + y1 + dy = 0\n",
+    "    omega[iy_next][iy] += -mo_noise\n",
+    "    omega[iy_next][iy_next] += mo_noise\n",
+    "    xi[iy_next] += (mo_noise * dy)\n",
+    "    \n",
+    "\n",
+    "# update measuremetn\n",
+    "def update_measurement(step, meas, omega, xi, meas_noise, num_steps):\n",
+    "    ix = step * 2\n",
+    "    iy = ix + 1\n",
+    "    \n",
+    "    # landmark\n",
+    "    index_landmark, meas_x, meas_y = meas\n",
+    "    ix_m = num_steps * 2 + index_landmark\n",
+    "    iy_m = ix_m + 1\n",
+    "    \n",
+    "    # at row 0\n",
+    "    # x0 - m0_x - meas_x = 0\n",
+    "    omega[ix][ix] += meas_noise\n",
+    "    omega[ix][ix_m] += -meas_noise\n",
+    "    xi[ix] += (-meas_noise * meas_x)\n",
+    "    \n",
+    "    # at row 0\n",
+    "    # y0 - m0_y - meas_y = 0\n",
+    "    omega[iy][iy] += meas_noise\n",
+    "    omega[iy][iy_m] += -meas_noise\n",
+    "    xi[iy] = (-meas_noise * meas_y)\n",
+    "    \n",
+    "    # at row landmark\n",
+    "    # -x0 + m1_x + meas_x = 0\n",
+    "    omega[ix_m][ix] += -meas_noise\n",
+    "    omega[ix_m][ix_m] += meas_noise\n",
+    "    xi[ix_m] += (meas_noise * meas_x)\n",
+    "    \n",
+    "    # at row landmark\n",
+    "    # -y0 + m1_y + meas)y = 0\n",
+    "    omega[iy_m][iy] += -meas_noise\n",
+    "    omega[iy_m][iy_m] += meas_noise\n",
+    "    xi[iy_m] += (meas_noise * meas_y)\n",
+    "    \n",
+    "\n",
     "## slam takes in 6 arguments and returns mu, \n",
     "## mu is the entire path traversed by a robot (all x,y poses) *and* all landmarks locations\n",
     "def slam(data, N, num_landmarks, world_size, motion_noise, measurement_noise):\n",
     "    \n",
     "    ## TODO: Use your initilization to create constraint matrices, omega and xi\n",
-    "    initial_omega, initial_xi = initialize_constraints(N, num_landmarks, world_size)\n",
+    "    omega, xi = initialize_constraints(N, num_landmarks, world_size)\n",
     "    \n",
     "    ## TODO: Iterate through each time step in the data\n",
     "    ## get all the motion and measurement data as you iterate\n",
+    "    \n",
+    "    mo_noise = 1.0 / motion_noise\n",
+    "    meas_noise = 1.0 / measurement_noise\n",
+    "    \n",
     "\n",
-    "    for index_x, d in enumerate(data):\n",
+    "    for step, (measurements, motion) in enumerate(data):\n",
     "        # data holds the sensors measurements and motion of your robot over time. \n",
     "        # It stores the measurements as data[i][0] and the motion as data[i][1].\n",
-    "        measurements = d[0]\n",
-    "        motion = d[1]\n",
-    "        \n",
     "        dx = motion[0]\n",
     "        dy = motion[1]\n",
-    "        \n",
-    "        for m in measurements:\n",
-    "            i_landmark = m[0]\n",
-    "            x_landmark = m[1]\n",
-    "            y_landmark = m[2]\n",
     "            \n",
     "    ## TODO: update the constraint matrix/vector to account for all *measurements*\n",
     "    ## this should be a series of additions that take into account the measurement noise\n",
-    "        \n",
+    "         for meas in measurements:\n",
+    "            update_measurement(step, meas, omega, xi, meas_noise, N)\n",
     "            \n",
     "    ## TODO: update the constraint matrix/vector to account for all *motion* and motion noise\n",
+    "    update_motion(step + 1, step, dx, dy, omega, xi, mo_noise)\n",
     "    \n",
     "    ## TODO: After iterating through all the data\n",
     "    ## Compute the best estimate of poses and landmark positions\n",
     "    ## using the formula, omega_inverse * Xi\n",
-    "    mu = None\n",
+    "    mu = np.linalg.inv(np.matrix(omega)) * xi\n",
     "    \n",
     "    return mu # return `mu`\n"
    ]
